Update image path

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     </div>
     </div>
     <script src="popup.js"></script>
-    <img id="me_img" src="images/AnthonySandhar-Cruz3.jpg" />
+    <img id="me_img" src="AnthonySandhar-Cruz3.jpg" />
     <h1 id="about_me">About Me</h1>
     <p id="about_text1">
       My name is Anthony Sandhar-Cruz, and I am a fourth year student at Queen's
