--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
     <h1 id="about_me">About Me</h1>
     <p id="about_text1">
       My name is Anthony Sandhar-Cruz, and I am a fourth year student at Queen's
-      University studying physics. My primary interests are computer science,
-      IT, cybersecurity, and historical sword fighting.
+      University studying physics. My primary interests are IT, cybersecurity, 
+      computer science, and historical sword fighting.
     </p>
   </body>
 </html>
