--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
       -----------------------------------------------------
       <span style="font-size:18px">anthonysc-site:/projects/</span>
     </pre>
+    <p class="main-text">Page still being developed.</p>
     <div id="term-expanded">
       <button class="minimize-btn">
         <i class="fa-solid fa-circle-xmark"></i>
