--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <p id="about_text1">
       My name is Anthony Sandhar-Cruz, and I am a fourth year student at Queen's
       University studying physics. My primary interests are IT, cybersecurity, 
-      computer science, and historical sword fighting.
+      computer science, fitness, and historical sword fighting.
     </p>
   </body>
 </html>
